include_directories(../)
add_compile_options(-Wall -Wextra -Werror)
add_subdirectory(NQueen)
add_executable(echo echo.cc)
target_link_libraries(echo tinyev)
add_executable(discard discard.cc)
target_link_libraries(discard tinyev)
add_executable(chargen chargen.cc)
target_link_libraries(chargen tinyev)
add_executable(hello hello.cc)
target_link_libraries(hello tinyev)